--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
 ]}.
 
 {deps, [
-    {'jiffy', ".*", {git, "git://github.com/davisp/jiffy.git", "master"}}
+    {'jiffy', ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
+    {'poolboy', "0.*", {git, "https://github.com/devinus/poolboy.git", "master"}}
 ]}.
